SERVER-25135: mongos on startup becomes unusable if config servers are not reachable